1.3-25

* PredictMat can now handle NAs in a returned prediction matrix.
 
* vis.gam can handle NA's in predictions.

* Modification of large dataset handling for "tp" and "ts" bases. If there
  are more that 3000 unique covariate combinations for a tprs then 3000 
  combinations are randomly sub-sampled, and used as the initial knots for 
  tprs basis construction. The same random number seed is used every time, 
  (R's RNG state is unaltered by this). Control of this is usually via the 
  `max.knots' (default 3000) and `seed' (default 1) elements of the `xt'
  argument of `s'. In consequence, `max.tprs.knots' has been removed from 
  `gam.control'.

* Modification of `s' and `te' to allow an extra argument `xt' which can 
  contain extra information to pass to the basis constructors for smooths.

* removal of `full.call' from smooth.spec objects - it wasn't used 
  anywhere any more, and is a pain to maintain.

* removal of `full.formula' from the `gam' object - it is no longer used 
  anywhere and requires alot of code to construct.

* A bug in `null.space.dimension' caused prediction to fail for `s' terms 
  of 4 or more variables, unless the `m' argument was supplied explicitly 
  (and was large enough for the number of variables). Fixed. 

1.3-24

* summary.gam modified so that it behaves correctly if fitting routines 
  detect and deal with rank deficiency in parameteric part of a model.

* spring cleaning of help files.

* gam.check modified to report more useful convergence diagnostics.

* `model.matrix.gam' added.

* "cr" basis constructor modified to use the same centering conditions 
  as other bases (sum to zero over covariates, rather than parameters 
  sum to zero). This makes centred confidence intervals for smooths, of 
  the sort used in plot.gam, behave in a similar way for all bases. With 
  the old "cr" centering constraint there could be high negative 
  correlation between coefficients of a centered smooth and the intercept: 